fix(jdk17): replace Java 21 List.getFirst() in Cypher optimizer/test code
The Cypher inline-property-map planning and variable-length-path anchor
cherry-picks introduced List.getFirst() (Java 21+) on plain
List<BooleanExpression> and List<ExecutionStep> types. Replaced with
list.get(0) to keep the java17 branch on maven-compiler-plugin release 17.